# django-rest-api

./: README.md  main.py  models.dot  pyproject.toml  schema.yml  test_api.rest
api/: admin.py  models.py  serializers.py  settings.py  tests.py  urls.py  views.py
api/management/commands/: populate_db.py
api/migrations/: 0001_initial.py
core/: asgi.py  settings.py  urls.py  wsgi.py
